--- a/404.html
+++ b/404.html
@@ -1,4 +1,8 @@
 ---
 layout: default
-title: 404 Page Not Found
+title: "404: page not found"
+permalink: 404.html
+meta: '<meta http-equiv = "refresh" content = "1; url = https://eliloren.com" />'
 ---
+
+404.&nbsp;Redirecting...
